--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - backend
     build: ./www
     ports:
-      - 8080:3000
+      - 3000:3000
     environment:
       - REACT_APP_API_URL=http://localhost:8000/api/
 
@@ -26,6 +26,15 @@ services:
       - 27017:27017
     volumes:
       - todo:/data/db
+
+  nginx:
+    depends_on:
+      - frontend
+      - backend
+    restart: always
+    build: ./nginx
+    ports:
+      - 8080:80
 
 volumes:
   todo:
