--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,7 @@ server {
         proxy_pass http://frontend;
     }
 
-    location /sockjs-node {
+    location /ws {
         proxy_pass http://frontend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
